# proof-of-bundle-integrity

./: .gitignore  Proof.t.sol  README.md  axiom-repl.js  notes.txt
axiom-starter/app/circuit/: constants.ts  index.ts
mock-block-builder/: Cargo.toml
mock-block-builder/src/: call.rs  main.rs  sender.rs
mock-block-builder/src/abi/: ProofOfIntegrity.json
src/: AxiomV2Client.sol  Proof.sol
src/interfaces/: IAxiomV2Client.sol  IAxiomV2HeaderVerifier.sol  IAxiomV2Query.sol
test/: Proof.t.sol
